// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI module help menu is default fallback when no arguments 1`] = `
"Usage: swagger-jsdoc [options] <path ...>

Options:
  -V, --version                            output the version number
  -d, --definition <swaggerDefinition.js>  Input swagger definition.
  -o, --output [swaggerSpec.json]          Output swagger specification.
  -h, --help                               display help for command
"
`;

exports[`CLI module help menu works 1`] = `
"Usage: swagger-jsdoc [options] <path ...>

Options:
  -V, --version                            output the version number
  -d, --definition <swaggerDefinition.js>  Input swagger definition.
  -o, --output [swaggerSpec.json]          Output swagger specification.
  -h, --help                               display help for command
"
`;

exports[`CLI module should generate json final file from separated files 1`] = `
"Swagger specification is ready.
"
`;

exports[`CLI module should generate yml final file from separated files 1`] = `
"Swagger specification is ready.
"
`;

exports[`CLI module should reject definition file with invalid JSON syntax 1`] = `
"Error while loading definition file 'test/files/v2/wrong_syntax.json':
Expected property name or '}' in JSON at position 18
"
`;

exports[`CLI module should reject definition file with invalid YAML syntax 1`] = `
"Error while loading definition file 'test/files/v2/wrong_syntax.yaml':
Implicit keys need to be on a single line at line 2, column 13:

  !!!title: Hello World
            ^

"
`;

exports[`CLI module should report YAML documents with errors 1`] = `
"Here's the report: 


 Error in test/files/v2/wrong-yaml-identation.js :
YAMLParseError: All mapping items must start at the same column at line 3, column 1:

       - foo
  bar
^

YAMLParseError: Implicit map keys need to be followed by map values at line 3, column 3:

       - foo
  bar
  ^^^

"
`;

exports[`CLI module should require a definition file 1`] = `
"Definition file is required.
Usage: swagger-jsdoc [options] <path ...>

Options:
  -V, --version                            output the version number
  -d, --definition <swaggerDefinition.js>  Input swagger definition.
  -o, --output [swaggerSpec.json]          Output swagger specification.
  -h, --help                               display help for command
"
`;

exports[`CLI module should require an info object in the definition 1`] = `
"Definition file should contain an info object!
More at http://swagger.io/specification/#infoObject
"
`;

exports[`CLI module should require arguments with jsDoc data about an API 1`] = `
"You must provide sources for reading API files.
"
`;

exports[`CLI module should require title and version in the info object 1`] = `
"The title and version properties are required!
More at http://swagger.io/specification/#infoObject
"
`;
